--- a/controls/cis_sle15.yml
+++ b/controls/cis_sle15.yml
@@ -22,7 +22,7 @@ controls:
       - l2_server
       - l2_workstation
     notes: <-
-      This is a helper rule to reload Dconf datbase correctly.
+      This is a helper rule to reload Dconf database correctly.
     status: automated
     rules:
       - dconf_db_up_to_date
