--- a/controls/nist_rhacm.yml
+++ b/controls/nist_rhacm.yml
@@ -467,7 +467,7 @@ controls:
     Red Hat Advanced Cluster Management for Kubernetes
     relies on OpenShift for mandatory access control enforcement.
     Section b.3: Specifying that a subject that has been granted access to information is constrained
-    from changing one or more security attributes on subjects, obnjects, the information
+    from changing one or more security attributes on subjects, objects, the information
     system, or information system components is outside the scope of Red Hat Advanced
     Cluster Management for Kubernetes.
 
@@ -544,7 +544,7 @@ controls:
     Management for Kubernetes.
 
     Red Hat Advanced Cluster Management for Kubernetes
-    relies on OpenShift for preventing access to security-relavent information.
+    relies on OpenShift for preventing access to security-relevant information.
   rules: []
 - id: AC-3(6)
   status: not applicable
@@ -568,7 +568,7 @@ controls:
   notes: |-
     Enforcing the revocation of access authorizations resulting from
     changes to the security attributes of subjects and objects based on
-    organization-defined fules governing the timing of revocations of access
+    organization-defined rules governing the timing of revocations of access
     authorizations is outside the scope of Red Hat Advanced Cluster
     Management for Kubernetes.
 
@@ -630,7 +630,7 @@ controls:
 - id: AC-4(1)
   status: not applicable
   notes: |-
-    Using security attributes with information, source, and desstination
+    Using security attributes with information, source, and destination
     objects to enforce information flow control policies as a basis for flow
     control decisions is outside the scope of Red Hat Advanced Cluster
     Management for Kubernetes.
@@ -642,7 +642,7 @@ controls:
   status: not applicable
   notes: |-
     Using protected processing domains to enforce organization-defined
-    information flow control policiesas a basis for flow control decisions
+    information flow control policies as a basis for flow control decisions
     is outside the scope of Red Hat Advanced Cluster Management for
     Kubernetes.
 
@@ -722,7 +722,7 @@ controls:
   status: not applicable
   notes: |-
     Providing the capability for privileged administrators to configure
-    organization-defined security policy filters to suppor different
+    organization-defined security policy filters to support different
     security policies is outside the scope of Red Hat Advanced Cluster
     Management for Kubernetes.
   rules: []
@@ -753,7 +753,7 @@ controls:
   status: not applicable
   notes: |-
     Examining the information for the presence of organization-defined
-    unsanctioned information and prohibits the transfer of sucnh information
+    unsanctioned information and prohibits the transfer of such information
     in accordance with the organization-defined security policy is outside
     the scope of Red Hat Advanced Cluster Management for Kubernetes.
   rules: []
@@ -897,7 +897,7 @@ controls:
   status: not applicable
   notes: |-
     Explicitly authorizing access to organization-defined security
-    funcitions and security-relevant information is outside the scope of Red
+    functions and security-relevant information is outside the scope of Red
     Hat Advanced Cluster Management for Kubernetes.
 
     However, to aide in such processes, note that Red Hat Advanced Cluster
@@ -1070,7 +1070,7 @@ controls:
   status: supported
   notes: |-
     Red Hat Advanced Cluster Management for Kubernetes prevents
-    non-privileged users from executing privileged funcitions to include
+    non-privileged users from executing privileged functions to include
     disabling, circumventing, or altering implemented security safeguards or
     countermeasures by utilizing Role Based Access Controls (RBAC).
 
@@ -1459,7 +1459,7 @@ controls:
     consistent with organizational missions/business functions is an
     organizational control outside the scope of Red Hat Advanced Cluster
     Management for Kubernetes.
-    Section b: Documenting and providing supporting raionale in the security plan for
+    Section b: Documenting and providing supporting rationale in the security plan for
     the information system, user actions not requiring identification or
     authentication is an organizational control outside the scope of Red Hat
     Advanced Cluster Management for Kubernetes.
@@ -2198,7 +2198,7 @@ controls:
     \ annually or whenever a significant change occurs] \nAT-1 (b) (2) [at least annually\
     \ or whenever a significant change occurs]"
   title: >-
-    AT-1 - SECURITY AWARENESS AND TRAINING POLICY ANDPROCEDURES
+    AT-1 - SECURITY AWARENESS AND TRAINING POLICY AND PROCEDURES
   levels:
   - high
   - moderate
@@ -2252,7 +2252,7 @@ controls:
 - id: AT-2(2)
   status: not applicable
   notes: |-
-    Including ecurity awareness training on recognizing and reporting
+    Including security awareness training on recognizing and reporting
     potential indicators of insider threat is an organizational control
     outside the scope of Red Hat Advanced Cluster Management for Kubernetes
     configuration.
@@ -2755,7 +2755,7 @@ controls:
     \ IR-6, MA-4, MP-4, PE-3, PE-6, PE-14, PE-16, RA-5, SC-7, SC-18, SC-19, SI-3,\
     \ SI-4, SI-7.\n\nReferences: None.\n\nAU-6 (a)-1 [at least weekly] \nAU-6 Requirement:\
     \ Coordination between service provider and consumer shall be documented and accepted\
-    \ by the JAB/AO. In multi-tennant environments, capability and means for providing\
+    \ by the JAB/AO. In multi-tenant environments, capability and means for providing\
     \ review, analysis, and reporting to consumer for data pertaining to consumer\
     \ shall be documented."
   title: >-
@@ -4295,7 +4295,7 @@ controls:
 - id: CM-2(6)
   status: pending
   notes: |-
-    The organization maintainings a baseline configuration for information system development
+    The organization maintaining a baseline configuration for information system development
     and test environments that is managed separately from the operational baseline
     configuration are organizational processes/procedures outside the scope of
     Red Hat Advanced Cluster Management for Kubernetes configuration.
@@ -5750,7 +5750,7 @@ controls:
     time objectives) is outside the scope of Red Hat Advanced Cluster Management for Kubernetes
     configuration.
     Section b: Requests for Telecommunications Service Priority for all
-    telecommunucations services used for national security emergency
+    telecommunications services used for national security emergency
     preparedness in the event that the primary and/or alternate
     telecommunications services are provided by a common carrier
     are outside the scope of Red Hat Advanced Cluster Management for Kubernetes configuration.
@@ -5804,10 +5804,10 @@ controls:
     providers to have contingency plans is outside the scope
     of Red Hat Advanced Cluster Management for Kubernetes configuration.
     Section b: Reviewing provider contingency plans to ensure that the plans
-    meet organizational contingecny requirements is outside
+    meet organizational contingency requirements is outside
     the scope of Red Hat Advanced Cluster Management for Kubernetes configuration.
     Section c: Obtaining evidence of contingency testing/training by providers
-    at an organization-defined frequency is outside the plannedscope
+    at an organization-defined frequency is outside the planned scope
     of Red Hat Advanced Cluster Management for Kubernetes configuration.
   rules: []
   description: |-
@@ -6529,7 +6529,7 @@ controls:
 - id: IA-4(2)
   status: not applicable
   notes: |-
-    The organization requireing that the registration process to receive an individual
+    The organization requiring that the registration process to receive an individual
     identifier includes supervisor authorization is an organizational procedural requirement
     outside the scope of Red Hat Advanced Cluster Management
     for Kubernetes configuration.
@@ -6537,7 +6537,7 @@ controls:
 - id: IA-4(3)
   status: not applicable
   notes: |-
-    The organization requireing multiple forms of certification of individual
+    The organization requiring multiple forms of certification of individual
     identification be presented to the registration authority is an organizational procedural requirement
     outside the scope of Red Hat Advanced Cluster Management
     for Kubernetes configuration.
@@ -6874,7 +6874,7 @@ controls:
 - id: IA-5(5)
   status: not applicable
   notes: |-
-    The organization requireing developers/installers of information system
+    The organization requiring developers/installers of information system
     components to provide unique authenticators or change default
     authenticators prior to delivery/installation is an organizational process
     outside the scope of Red Hat Advanced Cluster Management
@@ -7202,17 +7202,17 @@ controls:
 - id: IR-1
   status: not applicable
   notes: |-
-    Section a: Developing, documenting, and dissemintating to organization-defined
+    Section a: Developing, documenting, and disseminating to organization-defined
     personnel or roles of incident response policies and procedures is an
     organizational control outside the scope of Red Hat Advanced Cluster
     Management for Kubernetes configuration.
-    Section a.1: Developing, documenting, and dissemintating to organization-defined
+    Section a.1: Developing, documenting, and disseminating to organization-defined
     personnel or roles an incident response policy that addresses purpose,
     scope, roles, responsibilities, management commitment, coordination
     among organizational entities, and compliance is an organizational
     control outside the scope of Red Hat Advanced Cluster Management for
     Kubernetes configuration.
-    Section a.2: Developing, documenting, and dissemintating to organization-defined
+    Section a.2: Developing, documenting, and disseminating to organization-defined
     personnel or roles procedures to facilitate the implementation of the
     incident response policy and associated incident response controls is an
     organizational control outside the scope of Red Hat Advanced Cluster
@@ -7221,7 +7221,7 @@ controls:
     organizational control outside the scope of Red Hat Advanced Cluster
     Management for Kubernetes configuration.
     Section b.1: Reviewing and updating the current incident response policy on an
-    organzation-defined frequency is an organizational control outside the
+    organization-defined frequency is an organizational control outside the
     scope of Red Hat Advanced Cluster Management for Kubernetes
     configuration.
     Section b.2: Reviewing and updating the current incident response procedures on an
@@ -7929,7 +7929,7 @@ controls:
   status: not applicable
   notes: |-
     Section a: Developing, documenting, and disseminating to organization-defined personnel or roles
-    system maintenance policy and produres is an organizational control outside the scope of
+    system maintenance policy and procedures is an organizational control outside the scope of
     Red Hat Advanced Cluster Management for Kubernetes configuration.
     Section a.1: A system maintenance policy that addresses purpose, scope, roles, responsibilities,
     management commitment, coordination among organizational entities, and compliance
@@ -7938,7 +7938,7 @@ controls:
     Section a.2: Procedures to facilitate the implementation of the access control policy and
     associated access controls is an organizational control outside the scope of Red Hat
     Advanced Cluster Management for Kubernetes configuration.
-    Section b: Reviewing and updating the current system maintenance policy and produres is an organizational control outside the scope of
+    Section b: Reviewing and updating the current system maintenance policy and procedures is an organizational control outside the scope of
     Red Hat Advanced Cluster Management for Kubernetes configuration.
     Section b.1: Reviewing and updating the current system maintenance policy per an organization-defined frequency
     is an organizational control outside the scope of
@@ -7977,7 +7977,7 @@ controls:
     on information system components in accordance with manufacturer or vendor specifications
     and/or organizational requirements is an organizational control outside the scope of
     Red Hat Advanced Cluster Management for Kubernetes configuration.
-    Section b: Approveing and monitoring all maintenance activities, whether performed on site or
+    Section b: Approving and monitoring all maintenance activities, whether performed on site or
     remotely and whether the equipment is serviced on site or removed to another location
     is an organizational control outside the scope of
     Red Hat Advanced Cluster Management for Kubernetes configuration.
@@ -8046,8 +8046,8 @@ controls:
 - id: MA-3
   status: not applicable
   notes: |-
-    The organization approveing, controlling, and monitoring information system maintenance tools
-    is an orgnaizational control outside the scope of Red Hat Advanced Cluster Management for Kubernetes
+    The organization approving, controlling, and monitoring information system maintenance tools
+    is an organizational control outside the scope of Red Hat Advanced Cluster Management for Kubernetes
     configuration.
   rules: []
   description: "The organization approves, controls, and monitors information system\
@@ -8074,7 +8074,7 @@ controls:
   notes: |-
     The organization inspecting the maintenance tools carried into a facility
     by maintenance personnel for improper or unauthorized modifications is an
-    orgnaizational control outside the scope of Red Hat Advanced Cluster Management for Kubernetes configuration.
+    organizational control outside the scope of Red Hat Advanced Cluster Management for Kubernetes configuration.
   rules: []
   description: |-
     The organization inspects the maintenance tools carried into a facility by maintenance personnel for improper or unauthorized modifications.
@@ -8116,7 +8116,7 @@ controls:
     facility is outside the scope of Red Hat Advanced Cluster Management for Kubernetes configuration.
     Section d: Preventing the unauthorized removal of maintenance equipment containing
     organizational information by obtaining an exception from
-    organization-defined personnel or roles explicity authorizing removal
+    organization-defined personnel or roles explicitly authorizing removal
     of the equipment from the facility is outside the scope of Red Hat Advanced Cluster Management for Kubernetes
     configuration.
   rules: []
@@ -8146,10 +8146,10 @@ controls:
   status: not applicable
   notes: |-
     Section a: Approving and monitoring nonlocal maintenance and diagnostic activities is an
-    orgnaizational control outside the scope of Red Hat Advanced Cluster Management for Kubernetes configuration.
+    organizational control outside the scope of Red Hat Advanced Cluster Management for Kubernetes configuration.
     Section b: Allowing the use of nonlocal maintenance and diagnostic tools only as consistent with
     organizational policy and documented in the security plan for the information system is an
-    orgnaizational control outside the scope of Red Hat Advanced Cluster Management for Kubernetes configuration.
+    organizational control outside the scope of Red Hat Advanced Cluster Management for Kubernetes configuration.
     Section c: Red Hat Advanced Cluster Management for Kubernetes
     relies on OpenShift for authentication management.
 
@@ -8157,7 +8157,7 @@ controls:
     and outside the scope of Red Hat Advanced Cluster Management
     for Kubernetes configuration.
     Section d: The maintaining of records for nonlocal maintenance and diagnostic activities is an
-    orgnaizational control outside the scope of Red Hat Advanced Cluster Management for Kubernetes configuration.
+    organizational control outside the scope of Red Hat Advanced Cluster Management for Kubernetes configuration.
     Section e: Red Hat Advanced Cluster Management for Kubernetes
     relies on OpenShift for session management.
 
@@ -9255,7 +9255,7 @@ controls:
   description: |-
     The organization protects power equipment and power cabling for the information system from damage and destruction.
 
-    Supplemental Guidance:  Organizations determine the types of protection necessary for power equipment and cabling employed at different locations both internal and external to organizational facilities and environments of operation. This includes, for example, generators and power cabling outside of buildings, internal cabling and uninterruptable power sources within an office or data center, and power sources for self-contained entities such as vehicles and satellites. Related control: PE-4.
+    Supplemental Guidance:  Organizations determine the types of protection necessary for power equipment and cabling employed at different locations both internal and external to organizational facilities and environments of operation. This includes, for example, generators and power cabling outside of buildings, internal cabling and uninterruptible power sources within an office or data center, and power sources for self-contained entities such as vehicles and satellites. Related control: PE-4.
 
     References: None.
   title: >-
