--- a/controls/nist_rhidm.yml
+++ b/controls/nist_rhidm.yml
@@ -103,7 +103,7 @@ controls:
 
     https://github.com/ComplianceAsCode/redhat-identity-management/issues/3'
 
-    Section b: 'Documentation/guiodance for this control is being
+    Section b: 'Documentation/guidance for this control is being
     tracked on GitHub:
 
     https://github.com/ComplianceAsCode/redhat-identity-management/issues/4'
@@ -375,7 +375,7 @@ controls:
     \ annually or whenever a significant change occurs] \nAT-1 (b) (2) [at least annually\
     \ or whenever a significant change occurs]"
   title: >-
-    AT-1 - SECURITY AWARENESS AND TRAINING POLICY ANDPROCEDURES
+    AT-1 - SECURITY AWARENESS AND TRAINING POLICY AND PROCEDURES
   levels:
   - high
   - moderate
@@ -690,7 +690,7 @@ controls:
     \ IR-6, MA-4, MP-4, PE-3, PE-6, PE-14, PE-16, RA-5, SC-7, SC-18, SC-19, SI-3,\
     \ SI-4, SI-7.\n\nReferences: None.\n\nAU-6 (a)-1 [at least weekly] \nAU-6 Requirement:\
     \ Coordination between service provider and consumer shall be documented and accepted\
-    \ by the JAB/AO. In multi-tennant environments, capability and means for providing\
+    \ by the JAB/AO. In multi-tenant environments, capability and means for providing\
     \ review, analysis, and reporting to consumer for data pertaining to consumer\
     \ shall be documented."
   title: >-
@@ -790,7 +790,7 @@ controls:
     Section a: 'Customers are required to provide record generation capability for the
     events defined in AU-2a at all information system components where audit
     capability is available. A successful control response will discuss the
-    coniguration of all system components to capture the events that were
+    configuration of all system components to capture the events that were
     defined in AU-2.
 
     Documentation/guidance on configuring auditable events is being
@@ -1763,7 +1763,7 @@ controls:
     https://github.com/ComplianceAsCode/redhat-identity-management/issues/66'
 
     Section c: 'Documentation/guidance on ensuring authenticators have sufficient
-    strenth of mechanism for their purpose is being tracked on GitHub:
+    strength of mechanism for their purpose is being tracked on GitHub:
 
     https://github.com/ComplianceAsCode/redhat-identity-management/issues/67'
 
@@ -1921,7 +1921,7 @@ controls:
     Management to use
     appropriate cryptographic modules. A successful control response will
     document what modules are in use, how to attest the configuration is
-    in place, and references to supporing documentation outlining the
+    in place, and references to supporting documentation outlining the
     FIPS 140-2 certification for enabled modules.
 
     Documentation to satisfy this control is being tracked on GitHub:
@@ -3088,7 +3088,7 @@ controls:
   description: |-
     The organization protects power equipment and power cabling for the information system from damage and destruction.
 
-    Supplemental Guidance:  Organizations determine the types of protection necessary for power equipment and cabling employed at different locations both internal and external to organizational facilities and environments of operation. This includes, for example, generators and power cabling outside of buildings, internal cabling and uninterruptable power sources within an office or data center, and power sources for self-contained entities such as vehicles and satellites. Related control: PE-4.
+    Supplemental Guidance:  Organizations determine the types of protection necessary for power equipment and cabling employed at different locations both internal and external to organizational facilities and environments of operation. This includes, for example, generators and power cabling outside of buildings, internal cabling and uninterruptible power sources within an office or data center, and power sources for self-contained entities such as vehicles and satellites. Related control: PE-4.
 
     References: None.
   title: >-
@@ -4626,7 +4626,7 @@ controls:
     Section c: 'Documentation regarding how Red Hat Identity Management can route
     connections to external
     systems through a managed interface is forthcoming. This
-    activity is being trackedin GitHub:
+    activity is being tracked in GitHub:
 
     https://github.com/ComplianceAsCode/redhat-identity-management/issues/144'
   rules: []
@@ -5022,7 +5022,7 @@ controls:
     \ information, or other credible sources of information;\n f. Obtains legal opinion\
     \ with regard to information system monitoring activities in accordance with applicable\
     \ federal laws, Executive Orders, directives, policies, or regulations; and\n\
-    \ g. Provides [Assignment: or ganization-defined information system monitoring\
+    \ g. Provides [Assignment: organization-defined information system monitoring\
     \ information] to [Assignment: organization-defined personnel or roles] [Selection\
     \ (one or more): as needed; [Assignment: organization-defined frequency]].\n\n\
     Supplemental Guidance:  Information system monitoring includes external and internal\
