--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -21,7 +21,7 @@ controls:
       - l1_server
       - l1_workstation
     notes: <-
-      This is a helper rule to reload Dconf datbase correctly.
+      This is a helper rule to reload Dconf database correctly.
     status: automated
     rules:
       - dconf_db_up_to_date
