--- a/controls/nist_ansibletower.yml
+++ b/controls/nist_ansibletower.yml
@@ -706,7 +706,7 @@ controls:
     \ annually or whenever a significant change occurs] \nAT-1 (b) (2) [at least annually\
     \ or whenever a significant change occurs]"
   title: >-
-    AT-1 - SECURITY AWARENESS AND TRAINING POLICY ANDPROCEDURES
+    AT-1 - SECURITY AWARENESS AND TRAINING POLICY AND PROCEDURES
   levels:
   - high
   - moderate
@@ -1101,7 +1101,7 @@ controls:
     \ IR-6, MA-4, MP-4, PE-3, PE-6, PE-14, PE-16, RA-5, SC-7, SC-18, SC-19, SI-3,\
     \ SI-4, SI-7.\n\nReferences: None.\n\nAU-6 (a)-1 [at least weekly] \nAU-6 Requirement:\
     \ Coordination between service provider and consumer shall be documented and accepted\
-    \ by the JAB/AO. In multi-tennant environments, capability and means for providing\
+    \ by the JAB/AO. In multi-tenant environments, capability and means for providing\
     \ review, analysis, and reporting to consumer for data pertaining to consumer\
     \ shall be documented."
   title: >-
@@ -4404,7 +4404,7 @@ controls:
   description: |-
     The organization protects power equipment and power cabling for the information system from damage and destruction.
 
-    Supplemental Guidance:  Organizations determine the types of protection necessary for power equipment and cabling employed at different locations both internal and external to organizational facilities and environments of operation. This includes, for example, generators and power cabling outside of buildings, internal cabling and uninterruptable power sources within an office or data center, and power sources for self-contained entities such as vehicles and satellites. Related control: PE-4.
+    Supplemental Guidance:  Organizations determine the types of protection necessary for power equipment and cabling employed at different locations both internal and external to organizational facilities and environments of operation. This includes, for example, generators and power cabling outside of buildings, internal cabling and uninterruptible power sources within an office or data center, and power sources for self-contained entities such as vehicles and satellites. Related control: PE-4.
 
     References: None.
   title: >-
@@ -6250,7 +6250,7 @@ controls:
     \ information, or other credible sources of information;\n f. Obtains legal opinion\
     \ with regard to information system monitoring activities in accordance with applicable\
     \ federal laws, Executive Orders, directives, policies, or regulations; and\n\
-    \ g. Provides [Assignment: or ganization-defined information system monitoring\
+    \ g. Provides [Assignment: organization-defined information system monitoring\
     \ information] to [Assignment: organization-defined personnel or roles] [Selection\
     \ (one or more): as needed; [Assignment: organization-defined frequency]].\n\n\
     Supplemental Guidance:  Information system monitoring includes external and internal\
