--- a/controls/nist_ocp4.yml
+++ b/controls/nist_ocp4.yml
@@ -117,7 +117,7 @@ controls:
     To configure an IdP, see https://docs.openshift.com/container-platform/latest/authentication/understanding-identity-provider.html
 
     Note that the using the htpasswd IDP type cannot cover this
-    control, therefore using httpasswd based IDPs should render
+    control, therefore using htpasswd based IDPs should render
     the system non-compliant.
   rules:
   - ocp_idp_no_htpasswd
@@ -209,7 +209,7 @@ controls:
     for information on configuring the audit logging.
 
     Note that the using the htpasswd IDP type cannot cover this
-    control, therefore using httpasswd based IDPs should render
+    control, therefore using htpasswd based IDPs should render
     the system non-compliant.
   rules:
   - ocp_idp_no_htpasswd
@@ -695,7 +695,7 @@ controls:
     maximum field sizes, and data/file types (for structured and unstructured data)
     can be met by OpenShift.
 
-    All of OpenShift extends the Kubernetes API with custom resource defintions.
+    All of OpenShift extends the Kubernetes API with custom resource definitions.
     The api has built-in limits and there are additional validations we can perform. [1]
 
     However security policy filters for data content which checks for specific words enumerated values
@@ -1171,7 +1171,7 @@ controls:
     on the IDP side.
 
     Note that the using the htpasswd IDP type cannot cover this
-    control, therefore using httpasswd based IDPs should render
+    control, therefore using htpasswd based IDPs should render
     the system non-compliant.
 
     To configure an IdP, see https://docs.openshift.com/container-platform/latest/authentication/understanding-identity-provider.html
@@ -1182,7 +1182,7 @@ controls:
     on the IDP side.
 
     Note that the using the htpasswd IDP type cannot cover this
-    control, therefore using httpasswd based IDPs should render
+    control, therefore using htpasswd based IDPs should render
     the system non-compliant.
 
     To configure an IdP, see https://docs.openshift.com/container-platform/latest/authentication/understanding-identity-provider.html
@@ -2238,7 +2238,7 @@ controls:
     \ annually or whenever a significant change occurs] \nAT-1 (b) (2) [at least annually\
     \ or whenever a significant change occurs]"
   title: >-
-    AT-1 - SECURITY AWARENESS AND TRAINING POLICY ANDPROCEDURES
+    AT-1 - SECURITY AWARENESS AND TRAINING POLICY AND PROCEDURES
   levels:
   - high
   - moderate
@@ -2462,7 +2462,7 @@ controls:
 
     Section d: The default Red Hat OpenShift audit policy is named "Default" and logs
     the metadata of all write and read requests. More information on
-    the metatada that is logged can be found at:
+    the metadata that is logged can be found at:
     https://docs.openshift.com/container-platform/4.7/security/audit-log-view.html
     and more information on the available audit policies can be found at:
     https://docs.openshift.com/container-platform/4.7/security/audit-log-policy-config.html
@@ -2709,8 +2709,8 @@ controls:
 - id: AU-5(2)
   status: supported
   notes: |-
-    OpenShift by default have a promethus rule to check if a alert reciver is configured so that
-    timely alerts are sent designate personnel. OpenShift provides multiple alert recivers integrations
+    OpenShift by default have a prometheus rule to check if a alert receiver is configured so that
+    timely alerts are sent designate personnel. OpenShift provides multiple alert receivers integrations
     to send realtime alerts to different services such as email, slack, pagerduty, webhooks, etc. [1]
 
     [1] https://docs.openshift.com/container-platform/4.6/monitoring/managing-alerts.html#configuring-alert-receivers_managing-alerts
@@ -2780,7 +2780,7 @@ controls:
     \ IR-6, MA-4, MP-4, PE-3, PE-6, PE-14, PE-16, RA-5, SC-7, SC-18, SC-19, SI-3,\
     \ SI-4, SI-7.\n\nReferences: None.\n\nAU-6 (a)-1 [at least weekly] \nAU-6 Requirement:\
     \ Coordination between service provider and consumer shall be documented and accepted\
-    \ by the JAB/AO. In multi-tennant environments, capability and means for providing\
+    \ by the JAB/AO. In multi-tenant environments, capability and means for providing\
     \ review, analysis, and reporting to consumer for data pertaining to consumer\
     \ shall be documented."
   title: >-
@@ -3118,10 +3118,10 @@ controls:
 - id: AU-8(1)
   status: automated
   notes: |-
-    Section a: OpenShift synchronizes time by utilizing the time services of the underyling operating
+    Section a: OpenShift synchronizes time by utilizing the time services of the underlying operating
     operating system. This control is not applicable to OpenShift.
 
-    Section b: OpenShift synchronizes time by utilizing the time services of the underyling operating
+    Section b: OpenShift synchronizes time by utilizing the time services of the underlying operating
     operating system. This control is not applicable to OpenShift.
   rules:
   - var_openshift_audit_profile=WriteRequestBodies
@@ -3336,7 +3336,7 @@ controls:
 - id: AU-11
   status: automated
   notes: |-
-    The Red Hat OpenShift audit logs are emited by the API servers
+    The Red Hat OpenShift audit logs are emitted by the API servers
     and stored on the master nodes.
     The API servers do not support retaining audit logs for at least a
     defined number of days, therefore the logs must be offloaded from
@@ -3419,7 +3419,7 @@ controls:
 - id: AU-12(1)
   status: automated
   notes: |-
-    OpenShift synchronizes time by utilizing the time services of the underyling operating
+    OpenShift synchronizes time by utilizing the time services of the underlying operating
     operating system. This control is not applicable to OpenShift.
   rules:
   - var_openshift_audit_profile=WriteRequestBodies
@@ -9890,7 +9890,7 @@ controls:
   description: |-
     The organization protects power equipment and power cabling for the information system from damage and destruction.
 
-    Supplemental Guidance:  Organizations determine the types of protection necessary for power equipment and cabling employed at different locations both internal and external to organizational facilities and environments of operation. This includes, for example, generators and power cabling outside of buildings, internal cabling and uninterruptable power sources within an office or data center, and power sources for self-contained entities such as vehicles and satellites. Related control: PE-4.
+    Supplemental Guidance:  Organizations determine the types of protection necessary for power equipment and cabling employed at different locations both internal and external to organizational facilities and environments of operation. This includes, for example, generators and power cabling outside of buildings, internal cabling and uninterruptible power sources within an office or data center, and power sources for self-contained entities such as vehicles and satellites. Related control: PE-4.
 
     References: None.
   title: >-
