Upgrade to changelog v3

--- a/.github/workflows/release-changelog.json
+++ b/.github/workflows/release-changelog.json
@@ -37,7 +37,9 @@
         "labels": ["Documentation"]
       }
     ],
-    "sort": "ASC",
+    "sort": {
+      "order": "ASC"
+    },
     "template": "${{CHANGELOG}}",
     "pr_template": "- ${{TITLE}} (#${{NUMBER}})",
     "empty_template": "- no changes",
