fix: another instance of httpasswd

--- a/controls/nist_ocp4.yml
+++ b/controls/nist_ocp4.yml
@@ -173,7 +173,7 @@ controls:
     To configure an IdP, see https://docs.openshift.com/container-platform/latest/authentication/understanding-identity-provider.html
 
     Note that the using the htpasswd IDP type cannot cover this
-    control, therefore using httpasswd based IDPs should render
+    control, therefore using htpasswd based IDPs should render
     the system non-compliant.
   rules:
   - ocp_idp_no_htpasswd
