--- a/linux_os/guide/system/software/integrity/software-integrity/aide/aide_scan_notification/ansible/shared.yml
+++ b/linux_os/guide/system/software/integrity/software-integrity/aide/aide_scan_notification/ansible/shared.yml
@@ -7,10 +7,10 @@
 
 - name: "Ensure AIDE is installed"
   package:
-    name: "{{ item }}"
+    name:
+      - aide
+      - crontabs
     state: present
-  with_items:
-    - aide
 
 - name: "{{{ rule_title }}}"
   cron:
