Fixes of cron package/service for SLE 12/15

--- a/controls/pcidss_4.yml
+++ b/controls/pcidss_4.yml
@@ -356,6 +356,7 @@ controls:
         - file_owner_cron_allow
         - file_owner_grub2_cfg
         - no_files_unowned_by_user
+        - package_cron_installed
         - service_cron_enabled
         - sshd_disable_empty_passwords
         - sshd_disable_rhosts
