Generalize kubelet authorization rule to work with EKS and OCP
This commit attempts to make a rule more reuseable by separating the
profile and benchmark details out into separate files. Ones for EKS and
the other for OCP.

--- a/controls/cis_ocp_1_3_0/section-4.yml
+++ b/controls/cis_ocp_1_3_0/section-4.yml
@@ -78,7 +78,8 @@ controls:
     - id: 4.2.2
       title: Ensure that the --authorization-mode argument is not set to AlwaysAllow
       status: pending
-      rules: []
+      rules:
+        - kubelet_authorization_mode
       level: level_1
     - id: 4.2.3
       title: Ensure that the --client-ca-file argument is set as appropriate
