--- a/products/eks/product.yml
+++ b/products/eks/product.yml
@@ -11,6 +11,8 @@ pkg_system: "rpm"
 
 init_system: "systemd"
 
+kubeletconf_path: "/etc/kubernetes/kubelet/kubelet-config.json"
+
 reference_uris:
   cis: 'https://www.cisecurity.org/benchmark/kubernetes/'
 
